se cambió video de fondo en la portada index.html por imagen fija, se empezó a aplicar SEO y a armar el footer

--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Semillero Digital</title>
+    <title>
+      Semillero Digital | ONG de capacitación digital a jóvenes en situación de
+      pobreza económica
+    </title>
+
+    <!-- META DESCRIPTION -->
+    <meta
+      name="description"
+      content="Semillero Digital es una comunidad de profesionales voluntarios que brinda un programa 
+      de capacitaciones en oficios digitales y mentoreo laboral a jóvenes en situación de pobreza económica."
+    />
+    <meta
+      name="keywords"
+      content="capacitaciones, oficios digitales,mentoreo laboral, inclusión,barrios populares, villas, pobreza, educación, trabajo, cursos"
+    />
+    <!-- /META DESCRIPTION-->
+
     <!-- CSS and Fonts -->
     <link
       rel="stylesheet"
@@ -19,7 +35,53 @@
     <link rel="stylesheet" href="css/main.css" />
     <!-- /CSS and Fonts -->
 
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="faviconapple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="favicon/android-icon-192x192.png"
+    />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+    <link rel="manifest" href="favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- FAVICON  -->
+
     <!-- JS -->
+    <script src="https://kit.fontawesome.com/25527e7843.js" crossorigin="anonymous"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -37,6 +99,7 @@
     ></script>
     <!-- /JS -->
   </head>
+
   <body>
     <!-- Header -->
     <header>
@@ -45,7 +108,10 @@
         class="navbar navbar-expand-lg navbar-light bg-light container"
       >
         <a class="navbar-brand" href="#">
-          <img src="img/logo.jpg" alt="Semillero Digital" />
+          <img
+            src="img/semilleroDigital-logo.jpg"
+            alt="Semillero Digital logo"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -63,8 +129,11 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#"
-                >¿Quiénes somos? <span class="sr-only">(current)</span></a
+                >Home<span class="sr-only">(current)</span></a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">¿Quiénes somos? </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Capacitate en Semillero</a>
@@ -84,22 +153,23 @@
     </header>
     <!-- /Header -->
 
-    <div class="background-wrap">
-      <video
-        id="video-bg"
-        preload="auto"
-        autoplay="true"
-        loop="loop"
-        muted="muted"
-      >
-        <source src="media/seed.mp4" type="video/mp4" />
-        Video no soportado
-      </video>
-    </div>
+    <section class="main">
+      <h2>Queremos sembrar <br>integración social a través <br> de la educación digital.</h2>
+    </section>
 
-    <div class="content">
-        <h2>Queremos sembrar integración social <br>a través de la educación digital.</h2>
-    </div>
-    
+    <footer id="footer">
+      <p>Derechos Reservados a Semillero Digital</p>
+      <ul>
+        <li>
+          <a href="#" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
+        </li>
+        <li>
+          <a href="#" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+        </li>
+        <li>
+          <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
