se avanzó con el footer, se acomodaron los iconos y se agregó :hover

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script  defer type="text/javascript" src="js/main.js"></script>
     <!-- /JS -->
   </head>
 
@@ -105,11 +106,11 @@
     <header>
       <nav
         id="header"
-        class="navbar navbar-expand-lg navbar-light bg-light container"
+        class="navbar navbar-expand-lg navbar-light bg-light "
       >
         <a class="navbar-brand" href="#">
           <img
-            src="img/semilleroDigital-logo.jpg"
+            src="img/logoSemilleroDigital.png"
             alt="Semillero Digital logo"
           />
         </a>
@@ -153,21 +154,21 @@
     </header>
     <!-- /Header -->
 
-    <section class="main">
+    <main class="main">
       <h2>Queremos sembrar <br>integración social a través <br> de la educación digital.</h2>
-    </section>
+    </main>
 
     <footer id="footer">
-      <p>Derechos Reservados a Semillero Digital</p>
+      <p>© Derechos Reservados a Semillero Digital</p>
       <ul>
         <li>
-          <a href="#" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
+          <a href="#" id="whatsapp" title="Whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </li>
         <li>
-          <a href="#" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+          <a href="#" id="facebook" title="Facebook" target="_blank"><i class="fab fa-facebook-square"></i></a>
         </li>
         <li>
-          <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" id="instagram" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
         </li>
       </ul>
     </footer>
