se agregaron iconos de youtube y linkedin al footer, se agrego el emoji de la semilla

--- a/index.html
+++ b/index.html
@@ -71,17 +71,38 @@
       sizes="192x192"
       href="favicon/android-icon-192x192.png"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="favicon/ms-icon-144x144.png"
+    />
     <meta name="theme-color" content="#ffffff" />
     <!-- FAVICON  -->
 
     <!-- JS -->
-    <script src="https://kit.fontawesome.com/25527e7843.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/25527e7843.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -97,17 +118,14 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script  defer type="text/javascript" src="js/main.js"></script>
+    <script defer type="text/javascript" src="js/main.js"></script>
     <!-- /JS -->
   </head>
 
   <body>
     <!-- Header -->
     <header>
-      <nav
-        id="header"
-        class="navbar navbar-expand-lg navbar-light bg-light "
-      >
+      <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
           <img
             src="img/logoSemilleroDigital.png"
@@ -155,20 +173,55 @@
     <!-- /Header -->
 
     <main class="main">
-      <h2>Queremos sembrar <br>integración social a través <br> de la educación digital.</h2>
+      <h2>
+        Queremos sembrar <br />integración social a través <br />
+        de la educación digital.
+      </h2>
     </main>
 
     <footer id="footer">
-      <p>© Derechos Reservados a Semillero Digital</p>
+      <p>© Derechos Reservados a Semillero Digital 🌱</p>
       <ul>
         <li>
-          <a href="#" id="whatsapp" title="Whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="#" id="whatsapp" title="Whatsapp" target="_blank"
+            ><i class="fab fa-whatsapp"></i
+          ></a>
         </li>
         <li>
-          <a href="#" id="facebook" title="Facebook" target="_blank"><i class="fab fa-facebook-square"></i></a>
+          <a
+            href="https://www.facebook.com/semillerodigitalarg"
+            id="facebook"
+            title="Facebook"
+            target="_blank"
+            ><i class="fab fa-facebook-square"></i
+          ></a>
         </li>
         <li>
-          <a href="#" id="instagram" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a
+            href="https://www.instagram.com/semillerodigital/"
+            id="instagram"
+            title="Instagram"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/channel/UCahAqFeBlVJGJPILLwFqSHg/featured"
+            id="youtube"
+            title="Youtube"
+            target="_blank"
+            ><i class="fab fa-youtube"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/company/semillero-digital/"
+            id="linkedin"
+            title="Linkedin"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </li>
       </ul>
     </footer>
