--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- Header -->
     <header>
       <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img
             src="img/logoSemilleroDigital.png"
             alt="Semillero Digital logo"
