se agregó la sección blog, falta css

--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Semillero Digital | ONG de capacitación digital a jóvenes en situación de
-      pobreza económica
-    </title>
+    <title>Semillero Digital | Blog y sección de notas periodísticas</title>
 
     <!-- META DESCRIPTION -->
     <meta
@@ -125,7 +122,7 @@
   <body>
     <!-- Header -->
     <header>
-      <nav id="header" class="navbar navbar-expand-lg ">
+      <nav id="header" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">
           <img
             src="img/logoSemilleroDigital.png"
@@ -147,9 +144,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="quienes-somos.html">¿Quiénes somos? </a>
@@ -172,13 +167,69 @@
     </header>
     <!-- /Header -->
 
-    <main class="main">
-      <h2>
-        Queremos sembrar <br />integración social a través <br />
-        de la educación digital.
-      </h2>
-    </main>
+    <!-- SECTION -->
+    <section id="blog">
+      <article class="blog-article">
+        <h3 class="blog-article-title">Semillero en La Nación</h3>
+        <div class="blog-article-container">
+          <img src="#" alt="Semillero en La Nación" />
+          <h4>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            odit doloribus in dicta laborum recusandae dolore id hic aut. Dicta
+            deleniti nisi architecto dolores iusto distinctio aspernatur nam
+            consectetur laborum.
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            odit doloribus in dicta laborum recusandae dolore id hic aut. Dicta
+            deleniti nisi architecto dolores iusto distinctio aspernatur nam
+            consectetur laborum.
+          </p>
+          <a href="#">Ver nota completa</a>
+        </div>
+      </article>
+      <article class="blog-article">
+        <h3 class="blog-article-title">Semillero en La Infobae</h3>
+        <div class="blog-article-container">
+          <img src="#" alt="Semillero en La Infobae" />
+          <h4>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            odit doloribus in dicta laborum recusandae dolore id hic aut. Dicta
+            deleniti nisi architecto dolores iusto distinctio aspernatur nam
+            consectetur laborum.
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            odit doloribus in dicta laborum recusandae dolore id hic aut. Dicta
+            deleniti nisi architecto dolores iusto distinctio aspernatur nam
+            consectetur laborum.
+          </p>
+          <a href="#">Ver nota completa</a>
+        </div>
+      </article>
+      <article class="blog-article">
+        <h3 class="blog-article-title">Semillero en Radio Congo</h3>
+        <div class="blog-article-container">
+          <img src="#" alt="Semillero en Radio Congo" />
+          <h4>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            odit doloribus in dicta laborum recusandae dolore id hic aut. Dicta
+            deleniti nisi architecto dolores iusto distinctio aspernatur nam
+            consectetur laborum.
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            odit doloribus in dicta laborum recusandae dolore id hic aut. Dicta
+            deleniti nisi architecto dolores iusto distinctio aspernatur nam
+            consectetur laborum.
+          </p>
+          <a href="#">Ver nota completa</a>
+        </div>
+      </article>
+    </section>
+    <!-- /SECTION -->
 
+    <!-- FOOTER -->
     <footer id="footer">
       <p>© Derechos Reservados a Semillero Digital 🌱</p>
       <ul>
@@ -225,5 +276,6 @@
         </li>
       </ul>
     </footer>
+    <!-- /FOOTER -->
   </body>
 </html>
