--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Semillero Digital | ONG de capacitación digital a jóvenes en situación de
-      pobreza económica
+      Semillero Digital | ¿Quiénes somos? Semillero Digital es una comunidad de profesionales voluntarios que brinda un programa 
+      de capacitaciones en oficios digitales y mentoreo laboral a jóvenes en situación de pobreza económica.
     </title>
 
     <!-- META DESCRIPTION -->
@@ -172,13 +172,61 @@
     </header>
     <!-- /Header -->
 
-    <main class="main">
-      <h2>
-        Queremos sembrar <br />integración social a través <br />
-        de la educación digital.
-      </h2>
+    <!-- MAIN  -->
+    <main class="container-fluid p-0 nosotros">
+      <div class="row m-4">
+        <div class="col-sm-12 col-md-7 p-0 nosotros__textos">
+          <h1>¿Quiénes somos?</h1>
+          <p>
+            Una comunidad de profesionales voluntarios que brinda un programa de
+            capacitaciones en oficios digitales y mentoreo laboral, a jóvenes en
+            situación de pobreza económica.
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-5 p-0">
+          <img
+            src="img/voluntarios.png"
+            alt="Quienes somos en Semillero"
+            class="nosotros__imagen"
+          />
+        </div>
+      </div>
     </main>
 
+    <section class="container-fluid p-0 queHacemos">
+      <div class="row queHacemos__textos">
+        <div class="col">
+          <h2>¿Qué hacemos?</h2>
+          <p>Generamos un Algoritmo que conecta, integra y potencia.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid p-0 objetivo">
+      <div class="row m-4">
+        <div class="col col-sm-12 col-md-5 p-0">
+          <img
+            src="img/voluntarios.png"
+            alt="Quienes somos en Semillero"
+            class="objetivo__imagen"
+          />
+        </div>
+
+        <div class="col col-sm-12 col-md-7 p-0 objetivo__textos">
+          <h2>Objetivo</h2>
+          <p>
+            <strong>POTENCIAR</strong> personas,
+            <strong>CONECTAR</strong> caminos e <strong>INTEGRAR</strong> mundos
+            que parecieran estar diseñados para no cruzarse: Lxs Jóvenes en
+            pobreza económica de un lado y lxs Profesionales y las Empresas del
+            campo laboral digital del otro.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- /MAIN  -->
+
+    <!-- FOOTER -->
     <footer id="footer">
       <p>© Derechos Reservados a Semillero Digital 🌱</p>
       <ul>
@@ -225,5 +273,6 @@
         </li>
       </ul>
     </footer>
+    <!-- /FOOTER -->
   </body>
 </html>
