se corrigió el dropdown en el navbar del header

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Semillero Digital | Blog y sección de notas periodísticas</title>
+    <title>
+      Semillero Digital | ONG de capacitación digital a jóvenes en situación de
+      pobreza económica
+    </title>
 
     <!-- META DESCRIPTION -->
     <meta
@@ -149,9 +152,25 @@
             <li class="nav-item">
               <a class="nav-link" href="quienes-somos.html">¿Quiénes somos? </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Capacitate en Semillero</a>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Capacitate en Semillero
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Personas</a>
+                <a class="dropdown-item" href="#">Empresas</a>
+              </div>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#">Vení a sembrar</a>
             </li>
