--- a/index.html
+++ b/index.html
@@ -154,9 +154,17 @@
             <li class="nav-item">
               <a class="nav-link" href="quienes-somos.html">¿Quiénes somos? </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Capacitate en Semillero</a>
+    
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Capacitate en Semillero
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Personas</a>
+                <a class="dropdown-item" href="#">Empresas</a>
+              </div>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#">Vení a sembrar</a>
             </li>
