--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Semillero Digital | ¿Quiénes somos? Semillero Digital es una comunidad de profesionales voluntarios que brinda un programa 
-      de capacitaciones en oficios digitales y mentoreo laboral a jóvenes en situación de pobreza económica.
+      Semillero Digital | ONG de capacitación digital a jóvenes en situación de
+      pobreza económica
     </title>
 
     <!-- META DESCRIPTION -->
@@ -125,7 +125,7 @@
   <body>
     <!-- Header -->
     <header>
-      <nav id="header" class="navbar navbar-expand-lg ">
+      <nav id="header" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">
           <img
             src="img/logoSemilleroDigital.png"
@@ -147,16 +147,30 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="quienes-somos.html">¿Quiénes somos? </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Capacitate en Semillero</a>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Capacitate en Semillero
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Personas</a>
+                <a class="dropdown-item" href="#">Empresas</a>
+              </div>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#">Vení a sembrar</a>
             </li>
