--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <body>
     <!-- Header -->
     <header>
-      <nav id="header" class="navbar navbar-expand-lg ">
+      <nav id="header" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="index.html">
           <img
             src="img/logoSemilleroDigital.png"
@@ -147,16 +147,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="quienes-somos.html">¿Quiénes somos? </a>
             </li>
-    
+
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
                 Capacitate en Semillero
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -181,7 +187,7 @@
     <!-- /Header -->
 
     <main class="main">
-      <h2>
+      <h2 id="#main-title">
         Queremos sembrar <br />integración social a través <br />
         de la educación digital.
       </h2>
