--- a/blog.html
+++ b/blog.html
@@ -191,8 +191,9 @@
       <article class="blog-article">
         <h3 class="blog-article-title">Semillero en La Nación</h3>
         <div class="blog-article-container row">
-          <img src="img/clase.jpeg" alt="Semillero en La Nación" class="col-12 col-lg-5"/>
-          <div class="blog-article-text col-12 col-lg-5 ">
+          <img src="img/clase.jpeg" alt="Semillero en La Nación" class="col-12 col-lg-5 "/>
+          <div class="col-lg-1"></div>
+          <div class="blog-article-text col-12 col-lg-5  ">
               <h4>
                 Semillero digital: profesionales de la informática capacitan a
                 jóvenes de barrios vulnerables
@@ -215,6 +216,7 @@
         <h3 class="blog-article-title">Semillero en Infobae</h3>
         <div class="blog-article-container row">
           <img src="img/aula-pantalla.JPG" alt="Semillero en Infobae" class="col-12 col-lg-5" />
+          <div class="col-lg-1"></div>
           <div class="blog-article-text col-12 col-lg-5">
               <h4>
                 Los oficios digitales más buscados del mercado laboral y la
@@ -242,6 +244,7 @@
             src="img/las promesas de elon.jpg"
             alt="Semillero en Radio Congo"
           />
+          <div class="col-lg-1"></div>
           <div class="blog-article-text col-12 col-lg-5">
             <h4>
                 Podcast en "Las promesas de Elon" , Radio Congo FM | T03E19: Aprendé
