--- a/blog.html
+++ b/blog.html
@@ -191,7 +191,7 @@
       <article class="blog-article">
         <h3 class="blog-article-title">Semillero en La Nación</h3>
         <div class="blog-article-container row">
-          <img src="img/clase.jpeg" alt="Semillero en La Nación" class="col-12 col-lg-5 "/>
+          <img src="img/clase.jpeg" alt="Semillero en La Nación" class="col-12 col-lg-5 img-fluid"/>
           <div class="col-lg-1"></div>
           <div class="blog-article-text col-12 col-lg-5  ">
               <h4>
@@ -215,7 +215,7 @@
       <article class="blog-article">
         <h3 class="blog-article-title">Semillero en Infobae</h3>
         <div class="blog-article-container row">
-          <img src="img/aula-pantalla.JPG" alt="Semillero en Infobae" class="col-12 col-lg-5" />
+          <img src="img/aula-pantalla.JPG" alt="Semillero en Infobae" class="col-12 col-lg-5 img-fluid" />
           <div class="col-lg-1"></div>
           <div class="blog-article-text col-12 col-lg-5">
               <h4>
@@ -240,7 +240,7 @@
         <h3 class="blog-article-title">Semillero en Radio Congo</h3>
         <div class="blog-article-container row">
           <img
-            class="col-12 col-lg-5"
+            class="col-12 col-lg-5 img-fluid"
             src="img/las promesas de elon.jpg"
             alt="Semillero en Radio Congo"
           />
