se cambió una imagen del blog

--- a/blog.html
+++ b/blog.html
@@ -191,7 +191,7 @@
       <article class="blog-article">
         <h3 class="blog-article-title">Semillero en La Nación</h3>
         <div class="blog-article-container row">
-          <img src="img/clase.jpeg" alt="Semillero en La Nación" class="col-12 col-lg-5 img-fluid"/>
+          <img src="img/enclase.JPG" alt="Semillero en La Nación" class="col-12 col-lg-5 img-fluid"/>
           <div class="col-lg-1"></div>
           <div class="blog-article-text col-12 col-lg-5  ">
               <h4>
