--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <!-- Header -->
     <header>
-        <nav id="header" class="navbar navbar-expand-lg navbar-light ">
+        <nav id="header" class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html">
                 <img src="img/logoSemilleroDigital.png" alt="Semillero Digital logo" />
             </a>
@@ -73,7 +73,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
