--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -61,7 +61,7 @@
 <body>
     <!-- Header -->
     <header>
-        <nav id="header" class="navbar navbar-expand-lg ">
+        <nav id="header" class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html">
                 <img src="img/logoSemilleroDigital.png" alt="Semillero Digital logo" />
             </a>
