se corrigio un error en el navbar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
         Semillero Digital | ONG de capacitación digital a jóvenes en situación de
-        pobreza económica
+        pobreza
     </title>
 
     <!-- META DESCRIPTION -->
