--- a/blog.html
+++ b/blog.html
@@ -120,68 +120,51 @@
   </head>
 
   <body>
-    <!-- Header -->
-    <header>
+     <!-- Header -->
+     <header>
       <nav id="header" class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="index.html">
-          <img
-            src="img/logoSemilleroDigital.png"
-            alt="Semillero Digital logo"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+          <a class="navbar-brand" href="index.html">
+              <img src="img/logoSemilleroDigital.png" alt="Semillero Digital logo" />
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon "></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="quienes-somos.html">¿Quiénes somos? </a>
-            </li>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="quienes-somos.html">¿Quiénes somos? </a>
+                  </li>
 
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Capacitate en Semillero
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Personas</a>
-                <a class="dropdown-item" href="#">Empresas</a>
-              </div>
-            </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Capacitate en Semillero
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="capacitate-personas.html">Personas</a>
+                          <a class="dropdown-item" href="capacitate-empresas.html">Empresas</a>
+                      </div>
+                  </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">Vení a sembrar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-          </ul>
-        </div>
+                  <li class="nav-item">
+                      <a class="nav-link" href="veni-a-sembrar.html">Vení a sembrar</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+              </ul>
+          </div>
       </nav>
-    </header>
-    <!-- /Header -->
+  </header>
+  <!-- /Header -->
 
     <!-- SECTION -->
     <div id="blog-title">
