--- a/capacitate-personas.html
+++ b/capacitate-personas.html
@@ -60,18 +60,18 @@
 <body>
     <!-- Header -->
     <header>
-        <nav id="header" class="navbar navbar-expand-lg navbar-dark ">
+        <nav id="header" class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html">
                 <img src="img/logoSemilleroDigital.png" alt="Semillero Digital logo" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon "></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
