--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
         Semillero Digital | ONG de capacitación digital a jóvenes en situación de
-        pobreza económica
+        pobreza
     </title>
 
     <!-- META DESCRIPTION -->
@@ -59,20 +59,20 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
+     <!-- Header -->
+     <header>
         <nav id="header" class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html">
                 <img src="img/logoSemilleroDigital.png" alt="Semillero Digital logo" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon "></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
