--- a/capacitate-personas.html
+++ b/capacitate-personas.html
@@ -10,7 +10,7 @@
 
     <!-- META DESCRIPTION -->
     <meta name="description" content="Semillero Digital es una comunidad de profesionales voluntarios que brinda un programa 
-      de capacitaciones en oficios digitales y mentoreo laboral a jóvenes en situación de pobreza económica." />
+      de capacitaciones en oficios digitales y mentoreo laboral a jóvenes en situación de pobreza." />
     <meta name="keywords"
         content="capacitaciones, oficios digitales,mentoreo laboral, inclusión,barrios populares, villas, pobreza, educación, trabajo, cursos" />
     <!-- /META DESCRIPTION-->
