--- a/capacitate-empresas.html
+++ b/capacitate-empresas.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-        Semillero Digital |  Detalle y programas de estudio de nuestros cursos destinados a pymes.
+        Semillero Digital |  Detalles y programas de estudio de nuestros cursos destinados a pymes.
     </title>
 
     <!-- META DESCRIPTION -->
     <meta name="description" content="Semillero Digital es una comunidad de profesionales voluntarios que brinda un programa 
-      de capacitaciones en oficios digitales y mentoreo laboral a jóvenes en situación de pobreza económica." />
+      de capacitaciones en oficios digitales y mentoreo laboral a jóvenes en situación de pobreza." />
     <meta name="keywords"
         content="capacitaciones, oficios digitales,mentoreo laboral, inclusión,barrios populares, villas, pobreza, educación, trabajo, cursos" />
     <!-- /META DESCRIPTION-->
