se corrigieron detalles finales

--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
           </div>
 
           <div class="col-sm-12 col-lg-6 nosotros__textos">
-              <h2>¿Quiénes somos?</h2>
-              <p>Una comunidad de profesionales voluntarios que brinda un programa de capacitaciones en oficios
-                  digitales y mentoreo laboral, a jóvenes en situación de pobreza.</p>
+              <h2 id="quienes-somos">¿Quiénes somos?</h2>
+              <p>Somos una comunidad de profesionales voluntarios que brinda un programa de capacitaciones en oficios
+                  digitales y mentoreo laboral, a jóvenes en situación de pobreza o de bajos recursos.</p>
           </div>
 
       </div>
@@ -258,7 +258,13 @@
       <div class="row m-4">
           <div class="col-sm-12 col-lg-6 objetivo__textos">
               <h2>Objetivo</h2>
-              <div class="ppp">
+              <p>
+                Tenemos como objetivo principal aportar crecimiento, 
+              valor y una realidad diferente. Logrando así, que quienes estudian desarrollen conocimientos para poder 
+               insertarse en el ámbito laboral.
+              </p>
+              
+              <!-- <div class="ppp">
                   <p class="potenciar">POTENCIAR</p>
                   <p class="conectar">CONECTAR</p>
                   <p class="integrar">INTEGRAR</p>
@@ -268,7 +274,7 @@
                   <strong>INTEGRAR</strong> mundos que parecieran estar diseñados para no cruzarse.<br>
                   <br>Los Jóvenes de un lado
                   y los Profesionales y Empresas del campo laboral digital del otro.
-              </p>
+              </p> -->
           </div>
           <div class="col-sm-12 col-lg-6 objetivo__contenedor__imagen">
               <img src="img/inicio-objetivosemillero.png" alt="Quienes somos en Semillero"
